--- a/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_cleanup_stale_accounts.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_cleanup_stale_accounts.html
@@ -13,7 +13,7 @@
   <script src="{% static 'js/index.js' %}"></script>
   <script src="{% static 'js/scannerjob/cleanupStaleAccountsCheckmarks.js' %}"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6/js/select2.min.js"></script>
-  <script>$("#cleanup_account_uuids").select2();</script>
+  <script>$("#cleanup_account_uuids").select2({dropdownParent: $('.cleanup-container')});</script>
 {% endblock %}
 
 {% block extra_head_html %}
