[#60867] Aliases for shared mail boxes
[#60867] Add checkmark for including shared mails in report module

[#60867] Remove new alias, add 'shared' boolean field

[#60867] Fix field in alias create form

--- a/src/os2datascanner/projects/admin/organizations/templates/components/modals/alias_create.html
+++ b/src/os2datascanner/projects/admin/organizations/templates/components/modals/alias_create.html
@@ -28,6 +28,11 @@
       </select>
     </div>
   </div>
+
+  <div id="id__shared_container" class="form__group">
+    <label for="id__shared">{% trans "Shared" %}</label>
+    <input type="checkbox" name="shared" id="id__shared" />
+  </div>
  
   <div id="id__value_container" class="form__group">
     <label class="required-form" for="id__value">{% trans "Value" %}</label>
