--- a/src/os2datascanner/projects/admin/adminapp/templates/components/scanstatus/status_timeline.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/scanstatus/status_timeline.html
@@ -1,23 +1,7 @@
 {% load i18n %}
 {% load l10n %}
 
-<td colspan="7" class="timeline">
-  <div class="more-info_container">
-    {% comment %} TODO: Maybe put this info inside the hidden row? {% endcomment %}
-    {% comment %} <ul>
-      <li>{{ status.total_objects }} {% trans "objects explored" %}</li>
-      {% if status.matches_found is not None%}
-      <li>
-        {{status.matches_found}} 
-        {% if status.matches_found == 1%}
-          {% trans "result"%}
-        {% else %}
-          {% trans "results" %}
-        {% endif %}
-      </li>
-      {% endif %}
-    </ul> {% endcomment %}
-  </div>
+<td colspan="5" class="timeline">
   <div class="statistic_header">
     <div>
       <h1 class="page-title_sub">{% trans "Timeline" %}</h1>
@@ -27,10 +11,18 @@
        data-chartid="timeline_status__{{ status.pk|unlocalize }}">
     <canvas class="line_chart"
             id="line_chart_status__{{ status.pk|unlocalize }}"
-            height="100"
+            height="200"
             width="500"></canvas>
   </div>
-</div>
-{{ snapshot_data|json_script:"snapshot_data" }}
-{{ status.pk|json_script:"status_pk" }}
+  {{ snapshot_data|json_script:"snapshot_data" }}
+  {{ status.pk|json_script:"status_pk" }}
+</td>
+<td colspan="2">
+  {% if status.skipped_by_last_modified %}
+    <p>{{ status.skipped_by_last_modified }} {% trans "known objects skipped due to no change" %}</p>
+    <p>{{ status.new_objects }} {% trans "new objects scanned" %}</p>
+  {% else %}
+    <p>{% trans "All objects scanned" %}</p>
+  {% endif %}
+  {% comment %} TODO: Show number of errors thrown during scan. {% endcomment %}
 </td>
