[#61065]Expand results on text click

--- a/src/os2datascanner/projects/report/reportapp/templates/components/reports/match_table.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/reports/match_table.html
@@ -37,7 +37,7 @@
                       class="matches-expand-all button button--caret-button button--icon-text-button"
                       aria-label="{% trans 'Show/hide all matches' %}"
                       title="{% trans 'Show/hide all matches' %}">
-                <span>{% trans "Show/hide all matches" %}</span>
+                {% trans "Show/hide all matches" %}
                 <i id="expand_more" class="material-icons" aria-hidden="true">expand_more</i>
               </button>
             </div>
