--- a/src/os2datascanner/projects/report/reportapp/templates/components/reports/match.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/reports/match.html
@@ -1,5 +1,6 @@
 {% load i18n l10n humanize admin_urls handle_extras %}
 {% with type=document_report.matches.handle|find_type_label %}
+
   {% with frag=document_report.matches.matches|merge_renderable_match_fragments %}
     <tr data-type="{{ type }}"
         {% if request.session.last_opened == document_report.pk|unlocalize %}class="highlighted"{% endif %}>
@@ -25,7 +26,7 @@
         <div class="tableUI__container">
 
           {% comment %} HTML is a programming language btw {% endcomment %}
-          {% if document_report.last_opened_time or document_report.matches.handle|present_url or type != 'ews' and type != 'msgraph-mail' and document_report.matches.handle|find_file_folder %}
+          {% if document_report.last_opened_time or document_report.matches.handle|present_url or type == 'smbc' or type != 'ews' and type != 'msgraph-mail' and document_report.matches.handle|find_file_folder %}
             <div class="hit-link">
               <div class="button-group"
                    name='open-button'
@@ -74,6 +75,23 @@
                             hx-trigger="click"
                             hx-indicator="closest tr"
                             hx-confirm="{% blocktrans %}You are about to delete selected file from your online drive. OSdatascanner cannot reverse this action. Are you sure?{% endblocktrans %}">
+                      {% trans "Delete" %}
+                    </button>
+                  </span>
+                {% endif %}
+                {% if show_smb_delete_button and type == 'smbc' %}
+                  <span class="delete-smb-file">
+                    <button class="button button--deletion-button"
+                            id="{{ document_report.pk }}"
+                            name='delete-smb-file'
+                            title="{% trans 'Deletes file from the shared drive' %}"
+                            hx-post="{% url 'delete-smb-file' document_report.pk %}"
+                            hx-vals='{{ document_report|make_smb_deletion_dict|json_dumps }}'
+                            hx-push-url="false"
+                            hx-swap="none"
+                            hx-trigger="click"
+                            hx-indicator="closest tr"
+                            hx-confirm="{% blocktrans %}You are about to delete the selected file from your shared drive. OSdatascanner cannot reverse this action. Are you sure?{% endblocktrans %}">
                       {% trans "Delete" %}
                     </button>
                   </span>
