--- a/src/os2datascanner/projects/report/reportapp/templates/components/reports/match.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/reports/match.html
@@ -1,4 +1,7 @@
 {% load i18n l10n humanize admin_urls handle_extras %}
+{% block scripts %}
+  <script async src="{% url 'jsi18n' %}"></script>
+{% endblock %}
 {% with type=document_report.matches.handle|find_type_label %}
 
   {% with frag=document_report.matches.matches|merge_renderable_match_fragments %}
@@ -132,7 +135,10 @@
       <td class="datatable__column--path">
         <div class="tooltip">
           <div class="overflow-ellipsis">
-            <span data-tooltip-text>{{ document_report.matches.handle.presentation_place }}</span>
+            {{ document_report.matches.handle.presentation_place }}
+            <button class="show-more button--transparent-button"
+                    onclick="togglePath(this)"
+                    type="button">{% trans "Show more" %}</button>
           </div>
         </div>
         <div class="hit-link">
