--- a/src/os2datascanner/projects/static/scss/components/_buttons.scss
+++ b/src/os2datascanner/projects/static/scss/components/_buttons.scss
@@ -266,6 +266,11 @@
 
 // ***** Miscellaneous button adjacent styling *****
 
+.show-more {
+  display: none;
+  cursor: pointer;
+}
+
 .button-group { // ***** Handles groups of buttons (surprice, surprice) and might need a refactoring (or at least a better name) at a later time *****
   display: flex;
   align-items: center;
