[60117] Cursor correction corrected

--- a/src/os2datascanner/projects/static/scss/components/_pagination.scss
+++ b/src/os2datascanner/projects/static/scss/components/_pagination.scss
@@ -119,7 +119,7 @@
     margin-right: .5rem;
     color: var(--color-text-secondary);
     font-size: .9rem;
-    cursor: text;
+    cursor: default;
   }
 
   input[type=number] {
