--- a/src/os2datascanner/projects/report/reportapp/templates/components/reports/handle_match.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/reports/handle_match.html
@@ -91,7 +91,7 @@
       <i class="material-icons">delete_forever</i><span>{% trans "Delete marked files" %}</span>
     </button>
   {% endif %}
-  {% if show_smb_delete_button and request.GET.source_type == "smbc" %}
+  {% if show_smb_mass_delete_button %}
     <button type="button"
             class="button table-checkbox__action button--icon-text-button"
             data-status="match-handle"
