[#60465] Functionality for enabling and disabling system rules
[#60465] Reload rules page when choosing organization

[#60465] Show m2m fields as horizontal filter in django admin

[#60465] Only show allowed system rules on scanner forms

--- a/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_form_select_option_field.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_form_select_option_field.html
@@ -6,7 +6,8 @@
   <div class="dropdown">
     <select name="{{ field.name }}"
             id="id_{{ field.name }}"
-            {% if field.field.choices|length <= 1 %}disabled="disabled"{% endif %}>
+            {% if field.field.choices|length <= 1 %}disabled="disabled"{% endif %}
+            {% if update_form %} hx-get="" hx-swap="outerHTML" hx-target=".content" hx-select=".content" hx-trigger="change" {% endif %}>
 
       {% for value, tag in field.field.choices %}
         <option value="{{ value }}"
