--- a/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_form.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_form.html
@@ -158,7 +158,7 @@
             {% endif %}
 
             {% if form.organization %}
-              {% include "components/scanner/scanner_form_select_option_field.html" with field=form.organization required="True" %}
+              {% include "components/scanner/scanner_form_select_option_field.html" with field=form.organization required="True" update_form="True" %}
             {% endif %}
 
             {% if form.validation_status %}
