--- a/src/os2datascanner/projects/report/reportapp/templates/statistics.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/statistics.html
@@ -36,6 +36,8 @@
   <script src="{% static 'js/charts/userCharts.js' %}"></script>
   <script src="{% static 'js/charts/barCharts.js' %}"></script>
   <script src="{% static 'js/modals/popover.js' %}"></script>
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
 
 {% endblock %}
