The file clear button now sizes properly, depending before on the form height and causing it to stretch. It also does not reload the page, causing a useless miniscan() from the backend.

--- a/src/os2datascanner/projects/admin/adminapp/templates/miniscan.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/miniscan.html
@@ -51,7 +51,12 @@
 
             <button name="validate-file"
                     id="file-clear-btn"
-                    onclick="clearFile()">{% trans "Clear file" %}
+                    class="button"
+                    aria-label="{% trans 'Clear selected file' %}"
+                    title="{% trans 'Clear selected file' %}"
+                    type="button"
+                    onclick="clearFile()">
+                    <span>{% trans "Clear file" %}</span>
             </button>
 
             <div hidden id="file-upload-error-response">
@@ -62,20 +67,12 @@
               {% trans "Please, select another (smaller) file to scan." %}
             </div>
           {% endwith %}
-<<<<<<< HEAD
 
           <h2>{% trans "Enter your text below" %}</h2>
           <input name="text"
                  id="upload-text"
                  type="text"
-                 class="upload" />
-=======
-          <h2>{% trans "Enter your text below" %}</h2>
-            <input name="text"
-                   id="upload-text"
-                   type="text"
-                   class="upload" />
->>>>>>> 00b432eb6 (Added text field support to miniscanner)
+                 class="upload" /> 
 
           <h2>{% trans "Rule to execute" %}</h2>
           <h4>
