--- a/src/os2datascanner/projects/admin/adminapp/templates/components/miniscanner/miniscan_results.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/miniscanner/miniscan_results.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-{% if not file_obj %}
+{% if not file_obj and not text%}
   <div id="response" class="error">{% translate "No file uploaded." %}</div>
 {% elif file_obj.size > settings.MINISCAN_FILE_SIZE_LIMIT %}
   <div id="response" class="error">
