Answered all the replies and implemented fixes. The maximum text size for text input field is hard-coded at 2000 in checkTextSize.js

--- a/src/os2datascanner/projects/admin/adminapp/templates/components/miniscanner/miniscan_results.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/miniscanner/miniscan_results.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 {% if not file_obj and not text%}
-  <div id="response" class="error">{% translate "No file uploaded." %}</div>
+  <div id="response" class="error">{% translate "No file or text uploaded." %}</div>
 {% elif file_obj.size > settings.MINISCAN_FILE_SIZE_LIMIT %}
   <div id="response" class="error">
     {% with size=file_obj.size limit=settings.MINISCAN_FILE_SIZE_LIMIT %}
