Fixed the miniscanner description as well as some translations

--- a/src/os2datascanner/projects/admin/adminapp/templates/miniscan.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/miniscan.html
@@ -24,7 +24,8 @@
           {% with limit=settings.MINISCAN_FILE_SIZE_LIMIT %}
             {% blocktranslate trimmed %}
               The mini-scanner lets you execute any OSdatascanner rule on a single
-              file, and returns the results directly to this page.
+              file, or using the textbox below to enter any given text.
+              It returns the results directly to this page.
             {% endblocktranslate %}
             <br />
             <br />
