--- a/src/os2datascanner/projects/admin/adminapp/templates/miniscan.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/miniscan.html
@@ -23,7 +23,7 @@
           {% with limit=settings.MINISCAN_FILE_SIZE_LIMIT %}
             {% blocktranslate trimmed %}
               The mini-scanner lets you execute any OSdatascanner rule on a single
-              file, or using the textbox below to enter any given text.
+              file or piece of text.
               It returns the results directly to this page.
             {% endblocktranslate %}
             <br />
