Added the classification option. WIP. Classifying a file doesn't seem to work ...

--- a/src/os2datascanner/projects/admin/adminapp/templates/components/miniscanner/miniscan_results.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/miniscanner/miniscan_results.html
@@ -38,5 +38,13 @@
         </tr>
       {% endif %}
     </tbody>
+    {% if cl_res %}
+      {% for res in cl_res %}
+        {% for subres in res %}
+          <span>{{ subres }}</span>
+        <hr>
+        {% endfor %}
+      {% endfor %}
+    {% endif %}
   </table>
 {% endif %}
